--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "watch": "npx nutmeg watch ."
   },
   "dependencies": {
-    "@nutmeg/seed": "0.4.1"
+    "@nutmeg/seed": "0.4.1",
+    "moment": "^2.20.1"
   },
   "devDependencies": {
-    "@nutmeg/cli": "0.9.2",
+    "sinon": "4.1.5",
+    "@nutmeg/cli": "0.9.3",
     "@types/chai": "4.1.0",
     "@types/mocha": "2.2.46",
+    "@types/sinon": "4.1.3",
     "@webcomponents/webcomponentsjs": "1.0.22"
   }
 }
