--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "moment": "^2.20.1"
   },
   "devDependencies": {
-    "sinon": "4.1.5",
     "@nutmeg/cli": "0.9.3",
     "@types/chai": "4.1.0",
     "@types/mocha": "2.2.46",
     "@types/sinon": "4.1.3",
-    "@webcomponents/webcomponentsjs": "1.0.22"
+    "@webcomponents/webcomponentsjs": "1.0.22",
+    "sinon": "4.1.5"
   }
 }
