--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "engines": {
     "node": ">=8.0.0"
   },
-  "keywords": ["gdg-group", "nutmeg"],
+  "keywords": [
+    "gdg-group",
+    "nutmeg"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "npx nutmeg build .",
@@ -29,11 +32,9 @@
     "moment": "^2.20.1"
   },
   "devDependencies": {
-    "@nutmeg/cli": "0.9.3",
+    "@nutmeg/cli": "0.9.5",
     "@types/chai": "4.1.0",
     "@types/mocha": "2.2.46",
-    "@types/sinon": "4.1.3",
-    "@webcomponents/webcomponentsjs": "1.0.22",
-    "sinon": "4.1.5"
+    "@webcomponents/webcomponentsjs": "1.0.22"
   }
 }
