--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
     "moment": "^2.20.1"
   },
   "devDependencies": {
-    "@nutmeg/cli": "0.10.0",
-    "@types/chai": "4.1.1",
-    "@types/mocha": "2.2.46",
-    "@webcomponents/webcomponentsjs": "1.1.0"
+    "@nutmeg/cli": "0.10.0"
   }
 }
