--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "watch": "npx nutmeg watch ."
   },
   "dependencies": {
-    "@nutmeg/seed": "0.5.0",
+    "@nutmeg/seed": "^0.6.0",
     "moment": "^2.20.1"
   },
   "devDependencies": {
-    "@nutmeg/cli": "0.10.1"
+    "@nutmeg/cli": "0.10.4"
   }
 }
