--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "engines": {
     "node": ">=8.0.0"
   },
-  "keywords": ["gdg-group", "nutmeg"],
+  "keywords": [
+    "gdg-group",
+    "nutmeg"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -29,7 +32,7 @@
     "watch": "npx nutmeg watch ."
   },
   "dependencies": {
-    "@nutmeg/seed": "^0.6.0",
+    "@nutmeg/seed": "^0.6.1",
     "moment": "^2.20.1"
   },
   "devDependencies": {
