Update to use remotedata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,8 @@
     "target": "esnext",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-  ],
-  "include": [
-    "src"
-  ],
+  "exclude": ["node_modules", "dist"],
+  "include": ["src"]
 }
